# ipdocket

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  constraints.txt  docker-compose.managed-db.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_scheduler.py
app/: __init__.py  app_factory.py  bootstrap.py  extensions.py
app/data/: bib_field_mapping.json  canonical_fields_extended.csv  case_field_mappings.json  case_parameter_mapping.csv  kipo_notice_param_mappings.json  task_distribution_rules.json  unified_field_registry.json
app/models/: annuity.py  annuity_sync_queue.py  annuity_workflow_sync_dead_letter.py  annuity_workflow_sync_queue.py  assets.py  audit_log.py  backup_set.py  billing_guardrail.py  case.py  case_audit_log.py  case_details.py  case_flat_index.py  case_group.py  cited_reference.py  client.py  codes.py  communication.py  crm.py  crm_client_merge_log.py  deadline.py  deletion_log.py  docket.py  document.py  document_search.py  email_automation.py  error_report.py  file_delete_queue.py  invoice.py  ip_records.py  job_run.py  legacy_finance.py  letter.py  matter.py  matter_facts.py  matter_status_recalc_queue.py  notification.py  notification_queue.py  operation.py  parse_failure.py  party.py  (+15 more)
app/ops/: __init__.py  admin.py  durable_queue.py  healthcheck.py  models.py  retention.py  task_handlers.py  worker.py
app/security/: __init__.py  cidr.py  country_block.py  default_role_profiles.py  headers.py  policy_engine.py
app/services/: deletion_manager.py  docket_manual_state.py  document_search_service.py  executive_analytics_service.py  local_auth.py
app/templates/: 404.html  _entity_links.html  _productivity_panel.html  _saved_views_bar.html
app/utils/: __init__.py  annuity_deadline_routing.py  api_errors.py  api_response.py  case_dto.py  coercion.py  db_ddl.py  db_startup.py  file_lock.py  (+30 more)
docs/: LEGACY_COMPATIBILITY.md  THIRD_PARTY_NOTICES.md
legacy_billing_schema/: db_core.py  db_migrations.py
scripts/: __init__.py  ci_smoke_test.py  create_admin_user.py  restore_db_if_empty.sh  sync_env_defaults.py  wait_for_db.py
static_errors/: upload-too-large.html
tests/: __init__.py  conftest.py  test_billing_invoices_get_current_user.py  test_data_quality_dummy_candidates.py  test_file_preview_security.py  test_required_client_name.py  test_swallowed_exception_pass.py
(+853 files in other folders)
